# valid

./: .appveyor.yml  .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE_MIT  README.md  appveyor.yml  justfile  rustfmt.toml
.github/workflows/: ci.yml  coverage.yml
.ide-settings/jetbrains/runConfigurations/: Clippy default-features.run.xml  Clippy.run.xml  Test default-features.run.xml  Test lib default-features.run.xml  Test lib.run.xml  Test.run.xml
src/: bigdecimal.rs  constraint.rs  lib.rs  num.rs  primitives.rs  property.rs  std_types.rs  tests.rs
src/constraint/: mod.rs  tests.rs
src/core/: mod.rs  tests.rs
tests/: version_numbers.rs
