[package]
name = "valid"
version = "0.1.0"  # remember to update html_root_url
authors = ["haraldmaida"]
license = "MIT/Apache-2.0"

description = "Validate custom types by composing primitive validator functions"

edition = "2018"

[package.metadata.docs.rs]
all-features = true

[badges]
maintenance = { status = "experimental" }

[features]
default = []
serde1 = ["serde", "bigdecimal/serde", "chrono/serde"]

[dependencies]
bigdecimal = { version = "0.1", optional = true }
chrono = { version = "0.4", optional = true }
serde = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
failure = "0.1"
proptest = "0.9"
version-sync = "0.8"
